name:                project-utilities
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable comment-to-arff
  main-is:             Main.hs
  other-modules:
  build-depends:
    base >=4.7 && <4.9,
    strict,
    text,
    transformers
  hs-source-dirs:      comment-to-arff
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings

executable pull-comments
  main-is:             Main.hs
  other-modules:
  build-depends:
    base >=4.7 && <4.9,
    async,
    reddit,
    text,
    stm,
    stm-chans,
    transformers
  hs-source-dirs:      pull-comments
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall

executable produce-results
  main-is:             Main.hs
  other-modules:
  build-depends:
    base >=4.7 && <4.9,
    array,
    containers,
    data-counter,
    hmatrix,
    hnn,
    mtl,
    naive-bayes,
    random,
    text,
    time,
    vector
  hs-source-dirs:      produce-results
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall -O2
