name:                project-utilities
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable post-to-arff
  main-is:             Main.hs
  other-modules:
  build-depends:
    base >=4.7 && <4.9,
    strict,
    text,
    transformers
  hs-source-dirs:      post-to-arff
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings

executable pull-posts
  main-is:             Main.hs
  other-modules:
  build-depends:
    base >=4.7 && <4.9,
    async,
    reddit,
    text,
    stm,
    stm-chans,
    transformers
  hs-source-dirs:      pull-posts
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall

executable produce-results
  main-is:             Main.hs
  other-modules: Autoencoder
  build-depends:
    base >=4.7 && <4.9,
    array,
    containers,
    data-counter,
    hmatrix,
    hnn,
    mtl,
    naive-bayes,
    random,
    text,
    time,
    vector
  hs-source-dirs:      produce-results
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall -O2

executable parse-output
  main-is: Main.hs
  build-depends:
    base >= 4.7 && < 4.9,
    attoparsec,
    bytestring,
    cassava,
    containers,
    data-counter,
    text,
    vector
  hs-source-dirs: parse-output
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall -O2

executable chart-generator
  main-is: Main.hs
  build-depends:
    base >= 4.7 && < 4.9,
    bytestring,
    cassava,
    Chart,
    Chart-diagrams,
    containers,
    data-counter,
    text,
    vector
  hs-source-dirs: chart-generator
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall -O2
